<resources>
    <string name="app_name">LabsPAM</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Your Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_register">Register</string>
    <string name="input_full_name">Enter full name</string>
    <string name="birth_day">dd/mm/yy</string>
    <string name="location_input">Your location</string>
    <string name="phone_input">Your phone</string>
</resources>
